add smoke tests

--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "jest": "^26.0.1",
     "webpack-dev-server": "^3.11.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "test-watch": "jest --watch"
+  },
+  "jest": {
+    "roots": [
+      "test/javascript"
+    ]
   }
 }
