--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: GoChat_API_development
+  database: GoChat_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: GoChat_API_test
+  database: GoChat_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: GoChat_API_production
-  username: GoChat_API
-  password: <%= ENV['GOCHAT_API_DATABASE_PASSWORD'] %>
+  database: GoChat_production
+  username: GoChat
+  password: <%= ENV['GOCHAT_DATABASE_PASSWORD'] %>
