--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "tailwindcss": "^1.4.6"
   },
   "devDependencies": {
     "jest": "^26.0.1",
