--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "@babel/preset-react": "^7.10.1",
-    "@rails/webpacker": "5.1.1",
+    "@rails/webpacker": "^5.1.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
